--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,14 @@
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
-image: greenaddress/ci@sha256:b78f1865dac20f5a8f3237c7383f6a9cf88a612cda0129b3c8ee544262120c3e
+image: greenaddress/ci@sha256:48e8d7976e3b1f94dc863ac4d5029f762d84eb3214fa9d819e3e2f2302a94f39
 
-buster_release:
+bionic_release:
   tags:
     - ga
   script:
     - cd $CI_PROJECT_DIR
-    - ./tools/buster_deps.sh
+    - ./tools/bionic_deps.sh
     - ./tools/builddeps.sh
   cache:
     key: build-cache
@@ -30,7 +30,7 @@ windows_release:
     - ga
   script:
     - cd $CI_PROJECT_DIR
-    - ./tools/buster_deps.sh
+    - ./tools/bionic_deps.sh
     - ./tools/builddeps.sh windows
   cache:
     key: build-cache
