--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,19 @@
-language: generic
-sudo: required
-matrix:
-  include:
-    - services:
-        - docker
-      script: travis_wait 30 docker run -v $PWD:/ga greenaddress/ci@sha256:48e8d7976e3b1f94dc863ac4d5029f762d84eb3214fa9d819e3e2f2302a94f39 /bin/sh -c "cd /ga && tools/bionic_deps.sh && ./tools/builddeps.sh"
+dist: bionic
+os: linux
+language: minimal
+cache:
+  ccache: true
+  directories:
+    - $TRAVIS_BUILD_DIR/build-linux-gcc
+
+before_install:
+    - set -o errexit; sudo ./tools/bionic_deps.sh
+script:
+    - set -o errexit; source ./tools/buildenvs.sh
+    - ./tools/travisdotter.sh
+    - mkdir -p ${BUILDDIR}
+    - ./tools/buildqt.sh || (cat ${QTBUILD}/build.log && false)
+    - ./tools/buildgdk.sh || (cat ${GDKBUILD}/build.log && false)
+    - ${QT_PATH}/bin/qmake ../green.pro CONFIG+=release CONFIG+=x86_64 CONFIG+=qml_release CONFIG+=static QMAKE_CXXFLAGS_RELEASE+=-flto QMAKE_LDFLAGS_RELEASE+=-flto
+    - make -j${NUM_JOBS}
+    - python ../tools/symbol-check.py < ${BUILDROOT}/Green
