--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ bionic_release:
     - build-linux-gcc/gdk-*/src/build-*/src/libgreenaddress_full.a
     - build-linux-gcc/qt-release*
   artifacts:
+    name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 day
     when: always
     paths:
@@ -38,6 +39,7 @@ windows_release:
     - build-mingw-w64/gdk-*/src/build-*/src/libgreenaddress_full.a
     - build-mingw-w64/qt-release*
   artifacts:
+    name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 day
     when: always
     paths:
@@ -59,6 +61,7 @@ osx_release:
     - build-osx-clang/gdk-*/src/build-*/src/libgreenaddress_full.a
     - build-osx-clang/qt-release*
   artifacts:
+    name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 1 day
     when: always
     paths:
@@ -94,6 +97,7 @@ package_release:
   variables:
     GIT_STRATEGY: none
   artifacts:
+    name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
     expire_in: 14 days
     paths:
     - $CI_PROJECT_DIR/green_qt_dist
