--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
 
-image: greenaddress/ci@sha256:628fab4b831bfb9fa4fd2c2f43282e8b4045fbd0d529311adece22660ab3fd40
+image: greenaddress/ci@sha256:79c44e086bb9f38381c273a5da5cb50643dfb445a254784d6ad468f7664fb15b
 
 bionic_release:
   tags:
@@ -45,7 +45,7 @@ windows_release:
     paths:
     - build-mingw-w64/qt-release*/build.log
     - build-mingw-w64/gdk-*/build.log
-    - build-mingw-w64/release/Green.exe
+    - build-mingw-w64/Green.exe
 
 osx_release:
   tags:
