--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,7 +107,7 @@ package_release:
     - rm -fr green_qt_dist
     - mkdir green_qt_dist
     - zip -j green_qt_dist/GreenQt_Windows_x86_64.zip build-mingw-w64/Green.exe
-    - zip -rj green_qt_dist/GreenQt_MacOSX_x86_64.zip build-osx-clang/Green.app
+    - (cd build-osx-clang; zip -r ../green_qt_dist/GreenQt_MacOSX_x86_64.zip Green.app)
     - chmod +x build-linux-gcc/Green
     - tar czf green_qt_dist/GreenQt_Linux_x86_64.tar.gz -C build-linux-gcc Green
     - cd green_qt_dist
