--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,7 +140,7 @@ package_release:
     - (cd build-osx-clang; zip -r ../green_qt_dist/GreenQt_MacOSX_x86_64.zip Green.app)
     - chmod +x build-linux-gcc/Green
     - tar czf green_qt_dist/GreenQt_Linux_x86_64.tar.gz -C build-linux-gcc Green
-    - cp build-linux-gcc/Green-x86_64.AppImage green_qt_dist
+    - tar czf green_qt_dist/GreenQt_AppImage_x86_64.tar.gz -C build-linux-gcc Green-x86_64.AppImage
     - cd green_qt_dist
     - /opt/process_release
   dependencies:
