remove gdk submodule, git clone it

--- a/tools/envs.env
+++ b/tools/envs.env
@@ -20,7 +20,9 @@ fi
 DEPS=$(shasum -a 256 ./tools/bionic_deps.sh | cut -d" " -f1)
 DEPS="$DEPS $(shasum -a 256 Dockerfile | cut -d" " -f1)"
 
-export GDKBLDID=$(echo $(cd gdk && git rev-parse HEAD) $(shasum -a 256 ./tools/buildgdk.sh | cut -d" " -f1) ${DEPS} | shasum -a 256 | cut -d" " -f1)
+export GDKTAG=release_0.0.31
+
+export GDKBLDID=$(echo $(shasum -a 256 ./tools/buildgdk.sh | cut -d" " -f1) ${GDKTAG} ${DEPS} | shasum -a 256 | cut -d" " -f1)
 . tools/qtversion.env
 export QTBLDID=$(echo ${QTVERSION} ${DEPS} $(shasum -a 256 ./tools/buildqt.sh | cut -d" " -f1) | shasum -a 256 | cut -d" " -f1)
 
