--- a/tools/envs.env
+++ b/tools/envs.env
@@ -17,17 +17,29 @@ if [ "$2" != "" ]; then
 fi
 
 
-DEPS=$(shasum -a 256 ./tools/bionic_deps.sh | cut -d" " -f1)
-DEPS="$DEPS $(shasum -a 256 Dockerfile | cut -d" " -f1)"
+if [ -f /.dockerenv ]; then
+    . /qtversion.env
+    DEPS=$(shasum -a 256 /bionic_deps.sh | cut -d" " -f1)
+    DEPS="$DEPS $(shasum -a 256 /Dockerfile | cut -d" " -f1)"
+else
+    . tools/qtversion.env
+    DEPS=$(shasum -a 256 ./tools/bionic_deps.sh | cut -d" " -f1)
+    DEPS="$DEPS $(shasum -a 256 Dockerfile | cut -d" " -f1)"
+fi
+
 
 export GDKTAG=release_0.0.31
 
 export GDKBLDID=$(echo $(shasum -a 256 ./tools/buildgdk.sh | cut -d" " -f1) ${GDKTAG} ${DEPS} | shasum -a 256 | cut -d" " -f1)
-. tools/qtversion.env
 export QTBLDID=$(echo ${QTVERSION} ${DEPS} $(shasum -a 256 ./tools/buildqt.sh | cut -d" " -f1) | shasum -a 256 | cut -d" " -f1)
 
-
-export BUILDROOT=${PWD}/${BUILDDIR}
+if [ -f /.dockerenv ]; then
+    bld_root=/docker_bld_root
+    mkdir -p ${bld_root}
+    export BUILDROOT=${bld_root}/${BUILDDIR}
+else
+    export BUILDROOT=${PWD}/${BUILDDIR}
+fi
 
 export QT_PATH=${BUILDROOT}/qt-release-${QTBLDID}
 export GDK_PATH=${BUILDROOT}/gdk-${GDKBLDID}
