--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ bionic_release:
     - cp /docker_bld_root/*/Green-x86_64.AppImage build-linux-gcc/
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
-    expire_in: 1 day
+    expire_in: 1 week
     when: always
     paths:
     - build-linux-gcc/Green
@@ -32,7 +32,7 @@ windows_release:
     - cp /docker_bld_root/*/release/Green.exe build-mingw-w64/release/
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
-    expire_in: 1 day
+    expire_in: 1 week
     when: always
     paths:
     - build-mingw-w64/release/Green.exe
@@ -53,7 +53,7 @@ osx_release:
     - build-osx-clang/qt-release*
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
-    expire_in: 1 day
+    expire_in: 1 week
     when: always
     paths:
     - build-osx-clang/Green.app
@@ -92,7 +92,7 @@ osx_sign:
     GIT_STRATEGY: none
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
-    expire_in: 1 day
+    expire_in: 1 week
     when: always
     paths:
     - build-osx-clang/GreenQt_MacOSX_x86_64.zip
@@ -114,7 +114,7 @@ windows_sign:
     GIT_STRATEGY: none
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
-    expire_in: 1 day
+    expire_in: 1 week
     when: always
     paths:
     - build-mingw-w64/release/GreenSigned.exe
