Add Roboto font

--- a/src/qtquickcontrols2_linux.conf
+++ b/src/qtquickcontrols2_linux.conf
@@ -3,3 +3,9 @@ Theme=Dark
 Accent=#46b068
 Variant=Normal
 Background=#141a21
+
+[Material\Font]
+Weight=1
+Family=Roboto
+PixelSize=14
+Style=Regular
