Add libusb dependency

--- a/tools/envs.env
+++ b/tools/envs.env
@@ -27,6 +27,7 @@ fi
 
 
 export GDKTAG=release_0.0.40
+export LIBUSB_TAG=v1.0.24
 
 export GDKBLDID=$(echo $(shasum -a 256 ./tools/buildgdk.sh | cut -d" " -f1) ${GDKTAG} ${DEPS} | shasum -a 256 | cut -d" " -f1)
 export QTBLDID=$(echo ${QTVERSION} ${DEPS} $(shasum -a 256 ./tools/buildqt.sh | cut -d" " -f1) | shasum -a 256 | cut -d" " -f1)
@@ -41,6 +42,7 @@ fi
 
 export QT_PATH=${BUILDROOT}/qt-release-${QTBLDID}
 export GDK_PATH=${BUILDROOT}/gdk-${GDKBLDID}
+export LIBUSB_PATH=${BUILDROOT}/libusb
 
 if [ "$(uname)" == "Darwin" ]; then
     export NUM_JOBS=$(sysctl -n hw.ncpu)
