Add hidapi dependency

--- a/tools/envs.env
+++ b/tools/envs.env
@@ -28,6 +28,7 @@ fi
 
 export GDKTAG=release_0.0.40
 export LIBUSB_TAG=v1.0.24
+export HIDAPI_TAG=hidapi-0.10.1
 
 export GDKBLDID=$(echo $(shasum -a 256 ./tools/buildgdk.sh | cut -d" " -f1) ${GDKTAG} ${DEPS} | shasum -a 256 | cut -d" " -f1)
 export QTBLDID=$(echo ${QTVERSION} ${DEPS} $(shasum -a 256 ./tools/buildqt.sh | cut -d" " -f1) | shasum -a 256 | cut -d" " -f1)
@@ -43,6 +44,7 @@ fi
 export QT_PATH=${BUILDROOT}/qt-release-${QTBLDID}
 export GDK_PATH=${BUILDROOT}/gdk-${GDKBLDID}
 export LIBUSB_PATH=${BUILDROOT}/libusb
+export HIDAPI_PATH=${BUILDROOT}/hidapi
 
 if [ "$(uname)" == "Darwin" ]; then
     export NUM_JOBS=$(sysctl -n hw.ncpu)
