--- a/tools/envs.env
+++ b/tools/envs.env
@@ -26,7 +26,7 @@ else
 fi
 
 
-export GDKTAG=release_0.0.43
+export GDKTAG=release_0.0.43.post2
 export LIBUSB_TAG=v1.0.24
 export HIDAPI_TAG=hidapi-0.10.1
 
