Update GDK to 0.0.44

--- a/tools/envs.env
+++ b/tools/envs.env
@@ -26,7 +26,7 @@ else
 fi
 
 
-export GDKTAG=release_0.0.44rc1
+export GDKTAG=release_0.0.44
 export LIBUSB_TAG=v1.0.24
 export HIDAPI_TAG=hidapi-0.10.1
 
