--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: greenaddress/ci@sha256:87bd03f001904071c9e546796ef3e52d06d550dbb2c316d94d1967f605cd7e88
+image: greenaddress/ci@sha256:8a704193d5f855a7112910eb4c54f215dd0d9acd5f97e571144b4a8eddeae63c
 
 stages:
   - build
@@ -53,7 +53,8 @@ osx_release:
     - build-osx-clang/gdk-*/*.h
     - build-osx-clang/gdk-*/*.hpp
     - build-osx-clang/gdk-*/build.done
-    - build-osx-clang/gdk-*/libgreenaddress_full.a
+    - build-osx-clang/gdk-*/boost
+    - build-osx-clang/gdk-*/*.a
     - build-osx-clang/qt-release*
   artifacts:
     name: "$CI_PROJECT_NAME-$CI_JOB_NAME-$CI_COMMIT_SHORT_SHA"
