--- a/tools/envs.env
+++ b/tools/envs.env
@@ -17,7 +17,7 @@ if [ "$2" != "" ]; then
 fi
 
 
-if [ -f /.dockerenv ]; then
+if [ -f /qtversion.env ]; then
     . /qtversion.env
     DEPS=$(shasum -a 256 /bionic_deps.sh | cut -d" " -f1)
 else
@@ -26,7 +26,7 @@ else
 fi
 
 
-export GDKTAG=release_0.0.48
+export GDKTAG=release_0.0.49
 export LIBUSB_TAG=v1.0.24
 export HIDAPI_TAG=hidapi-0.10.1
 
