build: update ubuntu image

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,3 @@
 *
-!tools/bionic_deps.sh
-!tools/qtversion.env
-!tools/builddeps.sh
-!tools/envs.env
-!tools/buildlibusb.sh
-!tools/buildhidapi.sh
-!tools/buildgdk.sh
-!tools/buildqt.sh
+!tools
 !Dockerfile
