gdk: update to 0.0.55

--- a/tools/envs.env
+++ b/tools/envs.env
@@ -26,7 +26,7 @@ else
 fi
 
 
-export GDKTAG=release_0.0.54.post1
+export GDKTAG=release_0.0.55
 export LIBUSB_TAG=v1.0.26
 export HIDAPI_TAG=hidapi-0.11.2
 
